--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.4.2",
+    "ethers": "^5.6.9",
     "framer-motion": "^6.4.3",
     "next": "12.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.5.9"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
