--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.5.9"
+    "wagmi": "^0.5.9",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
