--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@rainbow-me/rainbowkit": "^0.4.2",
     "ethers": "^5.6.9",
     "framer-motion": "^6.4.3",
+    "graphql": "^16.5.0",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "urql": "^2.2.2",
     "wagmi": "^0.5.9",
     "zustand": "^4.0.0-rc.1"
   },
