--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.4.2",
+    "dayjs": "^1.11.3",
     "ethers": "^5.6.9",
     "framer-motion": "^6.4.3",
     "graphql": "^16.5.0",
